.build/k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-sites
  namespace: static-sites
spec:
  selector:
    app: static-sites
  ports:
    - port: 80
      targetPort: 80
